Added multiple Feature Parsers option tags to feature Files Added feature files option to test categories to automatically add feature files based on feature file parser capability

--- a/framework/src/main/resources/KartaConfiguration.yaml
+++ b/framework/src/main/resources/KartaConfiguration.yaml
@@ -32,7 +32,8 @@ enabledPlugins:
   - LoggingTestEventListener
   - BeanShellStepRunner
 
-defaultFeatureSourceParser: Kriya
+defaultFeatureSourceParsers:
+  - Kriya
 defaultStepRunners:
   - Kriya
   - BeanShellStepRunner
