--- a/runtime/src/main/resources/samples/KartaConfigurationOverrides.yaml
+++ b/runtime/src/main/resources/samples/KartaConfigurationOverrides.yaml
@@ -7,20 +7,11 @@ pluginConfigurations:
     className: org.mvss.karta.samples.plugins.RandomTestDataSource
     jarFile: samples.jar
 
-  - pluginName: CSVTestDataSourcePlugin
-    className: org.mvss.karta.samples.plugins.CSVTestDataSourcePlugin
-    jarFile: samples.jar
-
-  - pluginName: Gherkin
-    className: org.mvss.karta.samples.plugins.GherkinPlugin
-    jarFile: samples.jar
-
 enabledPlugins:
-  # - HTMLReportTestEventListener
+  - HTMLReportTestEventListener
   - ObjectGenTestDataSource
   - RandomTestDataSource
   - DumpToFileTestEventListener
-  - Gherkin
   - CSVTestDataSourcePlugin
 
 propertyFiles:
@@ -29,6 +20,7 @@ propertyFiles:
   - SampleRunProperties3.properties
   - WebAutomationProperties.yaml
   - BeanShellStepRunnerProperties.yaml
+  - JythonStepRunnerProperties.yaml
 
 nodes:
   - name: Node1
@@ -57,7 +49,7 @@ testCatalogFragmentFiles:
 
 properties:
   Karta:
-    detailedResults: false
+    detailedResults: true
     EventProcessor.numberOfThread: 10
 
   Kriya:
