--- a/runtime/src/main/resources/samples/KartaConfigurationOverrides.yaml
+++ b/runtime/src/main/resources/samples/KartaConfigurationOverrides.yaml
@@ -21,6 +21,7 @@ propertyFiles:
   - WebAutomationProperties.yaml
   - BeanShellStepRunnerProperties.yaml
   - JythonStepRunnerProperties.yaml
+  - GroovyStepRunnerProperties.yaml
 
 nodes:
   - name: Node1
