--- a/runtime/src/main/resources/samples/SampleTestCatalogFragment.yaml
+++ b/runtime/src/main/resources/samples/SampleTestCatalogFragment.yaml
@@ -11,6 +11,8 @@ featureSourceParsers:
 stepRunner:
   - Kriya
   - BeanShellStepRunner
+  - JythonStepRunner
+  - GroovyStepRunner
 testDataSources:
   - DataFilesTestDataSource
   - ObjectGenTestDataSource
