--- a/samples/src/main/resources/KartaConfigurationOverrides.yaml
+++ b/samples/src/main/resources/KartaConfigurationOverrides.yaml
@@ -21,6 +21,7 @@ propertyFiles:
   - WebAutomationProperties.yaml
   - BeanShellStepRunnerProperties.yaml
   - JythonStepRunnerProperties.yaml
+  - GroovyStepRunnerProperties.yaml
 
 ### Thread group name map to the number of threads to use to run tests with for the thread group. __default__ is the name of the default thread group
 threadGroups:
