Fixes for SSHUtil and ShaniDashboardPlugin

--- a/sample-cucumber-project/src/main/resources/properties/PluginProperties.yaml
+++ b/sample-cucumber-project/src/main/resources/properties/PluginProperties.yaml
@@ -3,5 +3,5 @@ ShaniDashboardPlugin:
   build: MyCucumberTestBuild1
   runName: MyCucumberTestRun1
   dashboardBaseURL: http://localhost:8000
-  dashboardUserName: admin
+  dashboardUserName: user
   dashboardUserPassword: password
