--- a/runtime/src/main/resources/samples/KartaConfigurationOverrides.yaml
+++ b/runtime/src/main/resources/samples/KartaConfigurationOverrides.yaml
@@ -22,6 +22,7 @@ propertyFiles:
   - BeanShellStepRunnerProperties.yaml
   - JythonStepRunnerProperties.yaml
   - GroovyStepRunnerProperties.yaml
+  - XlangStepRunnerProperties.yaml
 
 nodes:
   - name: Node1
