Change Shani dashboard plugin integration to Token Auth.

--- a/sample-cucumber-project/src/main/resources/properties/PluginProperties.yaml
+++ b/sample-cucumber-project/src/main/resources/properties/PluginProperties.yaml
@@ -3,5 +3,4 @@ ShaniDashboardPlugin:
   build: 1
   runName: TestRun1
   dashboardBaseURL: http://localhost:8000
-  dashboardUserName: user
-  dashboardUserPassword: password
+  dashboardUserToken: <token>
