--- a/server/pom.xml
+++ b/server/pom.xml
@@ -59,6 +59,23 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <!-- <dependency> <groupId>org.apache.derby</groupId> <artifactId>derbyclient</artifactId>
+            <scope>runtime</scope> </dependency> -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
         <!-- <dependency> <groupId>com.h2database</groupId> <artifactId>h2</artifactId>
             <scope>runtime</scope> </dependency> -->
         <!-- <dependency> <groupId>com.ibm.db2</groupId> <artifactId>jcc</artifactId>
