--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,30 +2,41 @@
 server.port=18080
 # This property is needed for thymeleaf template resolver to locate and load the template.
 #Do Not Remove this property.
-spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.prefix=file:./build/
+spring.resources.static-locations=file:./build/
 spring.jpa.open-in-view=false
 spring.mvc.favicon.enabled=false
 #JPA properties
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:./karta;DB_CLOSE_ON_EXIT=FALSE
-#spring.datasource.url=jdbc:h2:file:./KartaDashboard
-#jdbc:h2:./KartaDashboard;DB_CLOSE_ON_EXIT=TRUE
+spring.datasource.testOnBorrow=true
+spring.datasource.validationQuery=SELECT 1
+spring.datasource.username=karta
+spring.datasource.password=karta@123
+#spring.datasource.show-sql=true
+#spring.datasource.maxActive=10
+#spring.datasource.hikari.maximum-pool-size=10
+# H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=true
-spring.datasource.username=karta
-spring.datasource.password=karta@123
-spring.datasource.testOnBorrow=true
-spring.datasource.validationQuery=SELECT 1
-#spring.datasource.show-sql=true
-#spring.datasource.maxActive=10
-#spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:h2:./karta;DB_CLOSE_ON_EXIT=FALSE
+## PostgreSQL
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.url=jdbc:postgresql://localhost:5432/karta
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+## Derby
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.DerbyTenSevenDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.DerbyDialect
+#spring.datasource.url=jdbc:derby://localhost:1527/ECommApp;create=true
+#spring.datasource.driver-class-name=org.apache.derby.jdbc.ClientDriver
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.mvc.format.date-time=iso
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 logging.level.root=INFO
+#Front end views for static routing
+#frontend.views=/WebUI/**,/ui/**
