--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -40,3 +40,6 @@ spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 logging.level.root=INFO
 #Front end views for static routing
 #frontend.views=/WebUI/**,/ui/**
+
+springdoc.packagesToScan=org.mvss.karta.server
+springdoc.pathsToMatch=/api/**
