--- a/sample-cucumber-project/pom.xml
+++ b/sample-cucumber-project/pom.xml
@@ -61,6 +61,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path -->
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+
 
     </dependencies>
 
