--- a/sample-cucumber-project/src/main/resources/properties/PluginProperties.yaml
+++ b/sample-cucumber-project/src/main/resources/properties/PluginProperties.yaml
@@ -1,6 +1,6 @@
 ShaniDashboardPlugin:
   releaseName: V1.0
-  build: 1
+  build: My Test Build
   runName: TestRun1
   dashboardBaseURL: http://localhost:8000
-  dashboardUserToken: <token>
+  dashboardUserToken: abb3138eb5e280350c18f51a80850424994c620a
