Dockerfile update for containerized Selenium WebDriver Web UI testing

--- a/runtime/src/main/resources/samples/WebAutomationProperties.yaml
+++ b/runtime/src/main/resources/samples/WebAutomationProperties.yaml
@@ -1,6 +1,6 @@
 WebAutomation:
   webDriverOptions:
-    webDriverLocation: ../chromedriver
+    webDriverLocation: /usr/local/bin/chromedriver
     browser: CHROME
     headless: true
     ignoreCertificates: true
