--- a/samples/src/main/resources/SampleTestCatalogFragment.yaml
+++ b/samples/src/main/resources/SampleTestCatalogFragment.yaml
@@ -42,15 +42,15 @@ tests:
     numberOfThreads: 5
     sourceArchive: samples.jar
 
-  #  - name: WebAutomation
-  #    priority: 1
-  #    description: Web Automation test
-  #    tags:
-  #      - UI
-  #    featureFileName: featureFiles/UITests/WebAutomation.yaml
-  #    numberOfIterations: 10
-  #    numberOfThreads: 5
-  #    sourceArchive: samples.jar
+  - name: WebAutomation
+    priority: 1
+    description: Web Automation test
+    tags:
+      - UI
+    featureFileName: featureFiles/UITests/WebAutomation.yaml
+    numberOfIterations: 1
+    numberOfThreads: 1
+    sourceArchive: samples.jar
 
 #  - name: FailureSimulationFeature
 #    description: sample feature file
