--- a/samples/src/main/resources/featureFiles/UITests/WebAutomation.yaml
+++ b/samples/src/main/resources/featureFiles/UITests/WebAutomation.yaml
@@ -9,4 +9,5 @@ testScenarios:
       - step: When Learn HTML button from Home page is clicked
       - step: And HTML introduction link from Learn HTML Home page is clicked
       - step: And Learn HTML home link from HTML introduction page is clicked
+      - step: And validate that non existent element is not present in the learn HTML page
       - step: Then W3 Schools home button from Learn HTML Home page is clicked
