Update ShaniDashboardPlugin and ShaniDashboardReliabilityRunPlugin

--- a/framework/src/main/resources/KartaConfiguration.yaml
+++ b/framework/src/main/resources/KartaConfiguration.yaml
@@ -22,6 +22,9 @@ pluginConfigurations:
   - pluginName: HTMLReportTestEventListener
     className: org.mvss.karta.framework.plugins.impl.HTMLReportTestEventListener
 
+  - pluginName: ShaniDashboardReliabilityRunPlugin
+    className: org.mvss.karta.framework.plugins.impl.ShaniDashboardReliabilityRunPlugin
+
   - pluginName: BeanShellStepRunner
     className: org.mvss.karta.framework.plugins.impl.BeanShellStepRunner
 
